--- a/index.css
+++ b/index.css
@@ -138,24 +138,30 @@ body{
         align-items: center;
         padding: 3%;
         padding-right: 4%;
-        background-color: #282828 ;
+        background-color: #ffffff;
+        /* background-color: #282828 ; */
         /* z-index: 10; */
     }
     nav>.logo_name{
-        font-family: 'Lato',sans-serif;
+        /* font-family: 'Lato',sans-serif;
         font-family: 'Baloo Bhai 2', cursive;
         font-family: 'Bitter', serif;
         font-family: 'Lato', sans-serif;
         font-family: 'Open Sans', sans-serif;
-        font-family: 'Poppins', sans-serif;
+        font-family: 'Poppins', sans-serif; */
+        font-family: 'Open Sans', cursive;
         /* font-weight: 900; */
         /* line-height: 10px; */
     }
+    /* nav>.logo_name>div>b{
+        color: #3e1062;
+    } */
     nav>.logo_name>div{
         display: flex;
         align-items: center;
         justify-content:center;
-        color: rgb(252, 252, 252);
+        /* color: rgb(252, 252, 252); */
+        color: #3e1062;
     }
     nav>.logo_name>div>img{
         /* display: none; */
@@ -166,8 +172,11 @@ body{
         display: flex !important;
         align-items: center;
         justify-content: center;
-        height: 40px;
-        width:40px;
+        height: 50px;
+        width:50px;
+        border: 2px solid #3e1062;
+        /* padding: 1%; */
+        border-radius: 5px;
         /* background-color: #fff; */
     }
     .hamburger_wrap>.hamburger_icon{
@@ -175,7 +184,8 @@ body{
         width: 35px;
         height: 5px;
         border-radius: 5px;
-        background-color: rgba(255, 255, 255, 0.87);
+        /* background-color: rgba(255, 255, 255, 0.87); */
+        background-color: #3e1062;
         transition: all 0.4s ease-in-out;
     }
     .hamburger_wrap>.hamburger_icon.open{
@@ -191,29 +201,31 @@ body{
         width: 100%;
         height: 100%;
         border-radius: 5px;
-        background-color: rgb(236, 233, 233);
+        /* background-color: rgb(236, 233, 233); */
+        background-color: #3e1062;
         transition: all 0.4s ease-in-out;
     }
     .hamburger_wrap>.hamburger_icon::before{
         transform: translateY(-12px);
         transform-origin: right;
     }
+    
     .hamburger_wrap>.hamburger_icon::after{
         transform: translateY(6px);
         height: 5px;
         transform-origin: right;
     }
     .hamburger_wrap>.open::before{
-        transform: translate(30px,-12px) rotateZ(-45deg);
+        transform: translate(27px,-12px) rotateZ(-45deg);
     }
     .hamburger_wrap>.open::after{
-        transform: translate(30px,7px) rotateZ(45deg);
+        transform: translate(27px,7px) rotateZ(45deg);
     }
     .nav_items{
         position: absolute;
         display: block;
         width: 100%;
-        height: 80vh;
+        height: 85vh;
         background-color: #fff;
         /* top: 100%; */
         top: 100%;
@@ -221,7 +233,7 @@ body{
         color: #fff;
         /* top: -100%; */
         transition: all 0.4s ease-in-out;
-        z-index: 2;
+        z-index: 3;
     }
     .nav_items>ul{
         display: block;
@@ -229,21 +241,25 @@ body{
         list-style: none;
     }
     .nav_items>ul>hr{
-        width: 100%;
+        width: 90%;
         margin: 0 auto;
         border: none;
-        border-bottom: 0.1px solid gray;
+        border-bottom: 0.1px solid rgba(128, 128, 128, 0.253);
     }
     .nav_items>ul>b{
         border-top: 1px solid rgba(77, 77, 77, 0.055);
         text-align: center;
         display: block;
-        width: 100%;
+        width: fit-content;
+        margin: 0 auto;
+        padding: 1% 8%;
         font-size: 1.5em;
         font-weight: 900;
         /* color: rgba(255, 255, 255, 0.726); */
-        color: gray;
+        color: white;
+        border-radius: 60px;
         font-family: 'Poppins',sans-serif;
+        background-color: #3e1062;
         /* text-decoration: underline; */
     }
     .nav_items>ul>li{
@@ -253,6 +269,10 @@ body{
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         font-weight: 400;
         font-size: 1.2em;
+    }
+    .nav_items>ul>.contact{
+        display: flex;
+        justify-content: space-evenly;
     }
     .nav_items>ul>li>a{
         text-decoration: none;
@@ -266,12 +286,20 @@ body{
         display: flex;
         justify-content: space-evenly;
     }
+    .nav_items>ul>li.so_links>a>p,a>p{
+        color: #3e106221;
+        font-size: 0.6em;
+    }
     .nav_items>footer{
+        position: absolute;
+        bottom: 5%;
+        width: 100%;
         text-align: center;
         font-size: 0.8em;
         /* color: rgba(255, 255, 255, 0.507); */
         color: rgba(0, 0, 0, 0.301);
-        bottom: 10px;
+        /* bottom: 10px; */
+        
     }
     /*  */
     /* Landing page css */
@@ -310,7 +338,7 @@ body{
         width: 100vw;
         height: 100%;
         background: url('./Images/wedding_real_work_1.jfif') no-repeat;
-        background-size: contain;
+        background-size: 100%;
         display: flex;
         /* justify-content: flex-end; */
         align-items: center;
