--- a/index.css
+++ b/index.css
@@ -22,7 +22,26 @@ body{
     height: fit-content;
     /* overflow: hidden; */
 }
-
+/* Loader */
+.loader{
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+    transition: all 0.3s ease-in-out;
+}
+.loader>img{
+    width: 100%;
+}
+.main-content{
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+    display: none;
+}
 
 /* For big screens */
 .big_s{
