--- a/index.css
+++ b/index.css
@@ -22,7 +22,31 @@ body{
     height: fit-content;
     /* overflow: hidden; */
 }
-
+/* Loader */
+.loader{
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+    transition: all 0.3s ease-in-out;
+}
+.loader>img{
+    width: 10%;
+}
+.loader>.logo{
+    width: 7%;
+    position: absolute;
+    opacity: 1;
+}
+.main-content{
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+    display: none;
+}
 
 /* For big screens */
 .big_s{
@@ -117,8 +141,15 @@ body{
 /*  */
 /* For Tablets */
 @media (min-width:578px) and (max-width:900px) {
+
     .big_s{
         background-position: center;
+    }
+    .loader>img{
+        width: 40%;
+    }
+    .loader>.logo{
+        width: 30%;
     }
 }
 
@@ -132,6 +163,12 @@ body{
     }
     .bg_hide{
         display: block;
+    }
+    .loader>img{
+        width: 30%;
+    }
+    .loader>.logo{
+        width: 21%;
     }
     body{
         background-color: #ffffff;
@@ -565,9 +602,38 @@ body{
     }
 
     /* Css Photo wrap Css */
+
+    .yt_vid{
+        position: relative;
+        display: flex;
+        /* justify-content: center; */
+        /* align-items: center; */
+        overflow: auto;
+        width: 100vw;
+        height: 250px;
+        margin: 0px 5px 10px;
+        padding: 10px;
+        background: #3e1062;
+    }
+    .yt_vid:-webkit-scrollbar{
+        display: none;
+    }
+
+    .yt_vid>.yt_wrap{
+        width: 500vw;
+        display: flex;
+    }
+
+    .yt_vid>.yt_wrap>.yt_v{
+        position: relative;
+        /* width: 100%; */
+        /* height: 100%; */
+        margin-left: 2px;
+    }
+
     .photos_wrap{
         display: flex;
-        width: 95%;
+        width: 100%;
         flex-wrap: wrap;
     }
     .samp_img{
@@ -579,27 +645,28 @@ body{
         font-size: 1.5em;
         font-weight: 900;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
+        margin: 1px;
     }
     /* First row */
     .photos_wrap>.samp_img_50{
         position: relative;
-        width: 50%;
+        width: 49%;
     }
 
     /* Second Row */
     .photos_wrap>.samp_img_100{
-        width: 100%;
+        width: 99%;
     }
     /* Third Row */
     .photos_wrap>.samp_img_40{
-        width: 40%;
+        width: 39%;
     }
     .photos_wrap>.samp_img_60{
-        width: 60%;
+        width: 59%;
     }
     /* Last Row */
     .photos_wrap>.samp_img_100{
-        width: 100%;
+        width: 99%;
     }
     /*  */
 
@@ -776,17 +843,34 @@ body{
     100% { transform: translate(-100%, 0); }
 }
 /* Auto slide */
-@keyframes auto_slide {
+/* @keyframes auto_slide {
+
+
     0%{
-        transform: translateX(-100%);
+        transform: translateX(0vw);
     }
-    50%{
-        transform: translateX(-200%);
+    10%{
+        transform: translateX(0vw);
+    }
+    28%{
+        transform: translateX(0vw);
+    }
+    33%{
+        transform: translateX(-100vw);
+    }
+    /* 50%{
+        transform: translateX(-100vw);
+    } */
+    /* 60%{
+        transform: translateX(-100vw);
+    }
+    65%{
+        transform: translateX(-200vw);
     }
     100%{
-        transform: translateX(-100%);
-    }
-}
+        transform: translateX(-200vw);
+    } */
+/* } */
 
 /*  */
 /*  */
