--- a/index.css
+++ b/index.css
@@ -23,20 +23,34 @@ body{
     /* overflow: hidden; */
 }
 /* Loader */
+
+.loader_wrap>img{
+    z-index: 20;
+    position: absolute;
+    /* top: 0.8em;
+    left: 0.7em; */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    transition: all 0.6s ease;
+}
+
 .loader{
     position: absolute;
     top: 0px;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 100;
+    z-index: -1;
     transition: all 0.3s ease-in-out;
     background-color: #fff;
 }
 .loader>img{
-    width: 5%;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
 }
 .loader>.logo{
     width: 5%;
@@ -46,7 +60,7 @@ body{
 .main-content{
     /* opacity: 0; */
     transition: all 0.3s ease-in-out;
-    /* display: none; */
+    display: none;
 }
 
 /* For big screens */
